Partitially updated German translation.
svn path=/trunk/; revision=1776

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-04  Christian Neumair  <chris@gnome-de.org>
+
+	* de.po: Partitially updated German translation.
+
 2004-01-03  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
 
 	* es.po: Updated Spanish translation.
