added some test translations.
Mon Jan  5 01:21:18 2004  Tim Janik  <timj@gtk.org>

        * de.po: added some test translations.

svn path=/trunk/; revision=1778

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+Mon Jan  5 01:21:18 2004  Tim Janik  <timj@gtk.org>
+
+	* de.po: added some test translations.
+
 2004-01-04  Christian Neumair  <chris@gnome-de.org>
 
 	* de.po: Partitially updated German translation.
