--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-05  Vincent van Adrighem  <adrighem@gnome.org>
+
+	* nl.po: Translation updated by Tino Meinen.
+
 Mon Jan  5 01:21:18 2004  Tim Janik  <timj@gtk.org>
 
 	* de.po: added some test translations.
